--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,12 @@ body {
     border: 1px solid #eee;
 }
 
+.map__button {
+  margin: 10px 0;
+  font-size: 14px;
+  font-family: Arial;
+}
+
 .map__cell_water {
     background-color: #65a6ff;
 }
